--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@keyframes expandWidthHeight {
+    from {
+        width: 6rem;
+        height: 3rem;
+        /* Starts at a fixed width */
+    }
+
+    to {
+        width: 100%;
+        height: 100%;
+        /* Expands to the full width of its container */
+    }
+}
